--- a/themes/bootstrap3/templates/RecordTab/holdingsils/standard.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/standard.phtml
@@ -78,6 +78,17 @@
             </ul>
           </div>
         <?php endif; ?>
+        <?php if (!empty($holding['bound_with_records'])): ?>
+          <?=
+            $this->render(
+                'RecordTab/holdingsils/boundwith.phtml',
+                [
+                  'boundWithRecords' => $holding['bound_with_records'],
+                  'driver' => $driver,
+                ]
+            );
+          ?>
+        <?php endif; ?>
       <?php endif; ?>
       <?php /* Embed item structured data: library, barcode, call number */ ?>
       <?php if ($holding['location'] ?? false): ?>
