--- a/themes/bootstrap3/scss/components/record.scss
+++ b/themes/bootstrap3/scss/components/record.scss
@@ -217,6 +217,9 @@
 .tab-pane .result {
   margin-left: 0;
 }
+.bound-with-records .direct-item {
+  font-weight: bold;
+}
 
 /* ------ OpenURL Links ------ */
 .openurls {
@@ -304,3 +307,4 @@
     }
   }
 }
+
