--- a/themes/bootstrap3/templates/search/searchbox.phtml
+++ b/themes/bootstrap3/templates/search/searchbox.phtml
@@ -2,11 +2,10 @@
     // Initialize from current search (if available and not explicitly overridden) or defaults:
     if ($results = ($this->results ?? $this->searchMemory()->getCurrentSearch())) {
       $params = $results->getParams();
-      $this->searchClassId = $this->overrideSearchClassId ?? $params->getSearchClassId();
+      $this->searchClassId = $params->getSearchClassId();
     } else {
       $params = null;
-      $this->searchClassId = $this->overrideSearchClassId
-        ?? $this->searchClassId
+      $this->searchClassId = $this->searchClassId
         ?? $this->config()->get('config')->Site->defaultSearchBackend
         ?? 'Solr';
     }
@@ -22,6 +21,8 @@
       $lastLimit = $this->searchMemory()->getLastLimit($this->searchClassId);
       $options = $this->searchOptions($this->searchClassId);
     }
+    // Override search class ID with searchbox-specific settings, if necessary:
+    $this->searchClassId = $options->getSearchBoxSearchClassId();
 
     // Load search actions and settings (if any):
     $handlers = $this->searchbox()->getHandlers(
