Hide the bound_with_intro if not in locale file

--- a/themes/bootstrap3/templates/RecordTab/holdingsils/boundwith.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/boundwith.phtml
@@ -5,7 +5,9 @@
             ['%%callnumber%%' => $this->escapeHtml($callNumber)])
         ?>
     </h4>
-    <p><?=$this->translate('bound_with_intro', ['%%title%%' => $this->escapeHtml($this->truncate($driver->getTitle(), 50))])?></p>
+    <?php if ($this->translate('bound_with_intro', [], "")): ?>
+        <p><?=$this->translate('bound_with_intro', ['%%title%%' => $this->escapeHtml($this->truncate($driver->getTitle(), 50))])?></p>
+    <?php endif; ?>
     <ol>
         <?php foreach ($boundWithRecords as $record): ?>
             <li class="<?=($record['bibId']==$driver->getUniqueId()) ? 'direct-item' : 'bound-with-item'?>">
