Narrow the first holdings tab column

--- a/themes/bootstrap3/less/components/record.less
+++ b/themes/bootstrap3/less/components/record.less
@@ -217,6 +217,12 @@
 .tab-pane .result {
   margin-left: 0;
 }
+.holdings-tab table {
+  table-layout: auto;
+  th:first-child, td:first-child {
+    width: 25%;
+  }
+}
 
 /* ------ OpenURL Links ------ */
 .openurls {
