--- a/themes/bootstrap3/templates/RecordTab/holdingsils/boundwith.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/boundwith.phtml
@@ -1,16 +1,17 @@
 <div class="bound-with-records">
     <h4>
         <?=$this->transEsc(
-            $callNumberCount < 2 ? 'bound_with_heading_one_callnumber' : 'bound_with_heading_multiple_callnumbers', 
-            ['%%callnumber%%' => $this->escapeHtml($callNumber)])
+    $callNumberCount < 2 ? 'bound_with_heading_one_callnumber' : 'bound_with_heading_multiple_callnumbers',
+    ['%%callnumber%%' => $this->escapeHtml($callNumber)]
+)
         ?>
     </h4>
-    <?php if ($this->translate('bound_with_intro', [], "")): ?>
+    <?php if ($this->translate('bound_with_intro', [], '')): ?>
         <p><?=$this->translate('bound_with_intro', ['%%title%%' => $this->escapeHtml($this->truncate($driver->getTitle(), 50))])?></p>
     <?php endif; ?>
     <ul>
         <?php foreach ($boundWithRecords as $record): ?>
-            <li class="<?=($record['bibId']==$driver->getUniqueId()) ? 'direct-item' : 'bound-with-item'?>">
+            <li class="<?=($record['bibId'] == $driver->getUniqueId()) ? 'direct-item' : 'bound-with-item'?>">
                 <a href="<?=$this->escapeHtmlAttr($record['bibId'])?>">
                     <?=$this->escapeHtml($this->truncate($record['title'], 85)) ?>
                 </a>
