fix: combined filter dropdown padding and colors.

--- a/themes/bootprint3/less/bootprint.less
+++ b/themes/bootprint3/less/bootprint.less
@@ -62,6 +62,7 @@ header .navbar {
   .navbar-nav > li .dropdown-toggle  {
     position: relative;
     padding: 12px 6px;
+    color: @link-color;
 
     &:hover,
     &:focus {
