--- a/themes/bootstrap3/scss/components/lightbox.scss
+++ b/themes/bootstrap3/scss/components/lightbox.scss
@@ -9,7 +9,7 @@
 @media (min-width: 768px) {
   #modal .modal-dialog {
     width: fit-content;
-    max-width: 1200px;
+    max-width: min(1200px, calc(100vw - 200px)); // room for the close button
     min-width: 600px;
     padding: 0;
   }
