--- a/themes/bootstrap3/scss/components/lightbox.scss
+++ b/themes/bootstrap3/scss/components/lightbox.scss
@@ -9,7 +9,12 @@
 @media (min-width: 768px) {
   #modal .modal-dialog {
     width: fit-content;
-    max-width: min(1200px, calc(100vw - 200px)); // room for the close button
+/* #SCSS> */
+    max-width: #{'min(1200px, calc(100vw - 200px))'};
+/* <#SCSS */
+/* #LESS>
+    max-width: min(1200px, calc(100vw - 200px));
+<#LESS */
     min-width: 600px;
     padding: 0;
   }
