--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -424,6 +424,11 @@ body.rtl {
   padding: 0;
 }
 
+.combined-search-container.grid {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .combined-column {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -438,6 +443,9 @@ body.rtl {
     &.grid {
       display: grid;
       column-gap: 1rem;
+      padding-right: 1rem;
+      margin-left: 0;
+      margin-right: 0;
       // grid-template-columns is set dynamically in stack-grid.phtml.
     }
 
