Mirror null-coalescing from #3118

--- a/themes/bootstrap3/templates/combined/stack-grid.phtml
+++ b/themes/bootstrap3/templates/combined/stack-grid.phtml
@@ -6,9 +6,9 @@
   <?php foreach ($this->combinedResults as $searchClassId => $currentSearch): ?>
     <?php
       if (
-        (!isset($currentSearch['ajax']) || !$currentSearch['ajax'])                    // AJAX column
-        && (isset($currentSearch['hide_if_empty']) && $currentSearch['hide_if_empty']) // set to hide when empty
-        && $currentSearch['view']->results->getResultTotal() == 0                      // and empty
+        !($currentSearch['ajax'] ?? false)                        // AJAX column
+        && ($currentSearch['hide_if_empty'] ?? false)             // set to hide when empty
+        && $currentSearch['view']->results->getResultTotal() == 0 // and empty
       ) {
         continue;
       }
@@ -29,7 +29,7 @@
     <?php // This empty div prevents margin collapse, as the otherwise unneeded div.combined-column does elsewhere. ?>
     <div>
       <div id="<?=$this->escapeHtmlAttr($colParams['domId'])?>" class="combined-list">
-        <?php $templateSuffix = (isset($colParams['ajax']) && $colParams['ajax']) ? 'ajax' : 'list'; ?>
+        <?php $templateSuffix = ($colParams['ajax'] ?? false) ? 'ajax' : 'list'; ?>
         <?=$this->render('combined/results-' . $templateSuffix . '.phtml', $colParams)?>
       </div>
     </div>
