Fix missing increment of columnIndex

--- a/themes/bootstrap3/templates/combined/stack-grid.phtml
+++ b/themes/bootstrap3/templates/combined/stack-grid.phtml
@@ -24,6 +24,7 @@
       if (isset($currentSearch['ajax'])) {
         $colParams['ajax'] = $currentSearch['ajax'];
       }
+      $columnIndex ++;
     ?>
     <?php // This empty div prevents margin collapse, as the otherwise unneeded div.combined-column does elsewhere. ?>
     <div>
