--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -424,15 +424,20 @@ body.rtl {
   padding: 0;
 }
 
-.combined-jump-links ul {
-  display: inline;
-  list-style: none;
-  padding-left: 0;
-
-  li {
+.combined-jump-links {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  
+  ul {
     display: inline;
-    &:not(:first-child):before {
-      content: '\2013'; // n-dash
+    list-style: none;
+    padding-left: 0;
+
+    li {
+      display: inline;
+      &:not(:first-child):before {
+        content: '\2013'; // n-dash
+      }
     }
   }
 }
