--- a/themes/bootstrap3/templates/combined/jump-links.phtml
+++ b/themes/bootstrap3/templates/combined/jump-links.phtml
@@ -2,8 +2,8 @@
   <span><?=$this->translate('combined_jump_links_intro')?></span>
   <ul>
     <?php foreach ($combinedResults as $section) : ?>
-      <li class="<?= $section['domId'] ?>">
-        <a href="#<?= $section['domId'] ?>"><?= $section['label'] ?></a>
+      <li class="<?= $this->escapeHtmlAttr($section['domId']) ?>">
+        <a href="#<?= $this->escapeHtmlAttr($section['domId']) ?>"><?= $this->transEsc($section['label']) ?></a>
       </li>
     <?php endforeach; ?>
   </ul>
