--- a/themes/root/templates/HelpTranslations/en/blender.phtml
+++ b/themes/root/templates/HelpTranslations/en/blender.phtml
@@ -1,7 +1,7 @@
-<h1>Helpful Searching Tips</h1>
+<h1>Որոնման օգտակար խորհուրդներ</h1>
 
 <ul class="HelpMenu">
-  <li><a href="#boolean_operators">Boolean Operators</a>
+  <li><a href="#boolean_operators">Բուլյան օպերատորներ</a>
     <ul>
       <li><a href="#boolean_and">AND</a></li>
       <li><a href="#boolean_or">OR</a></li>
@@ -10,35 +10,35 @@
   </li>
 </ul>
 
-<dl class="Content">
-  <dt><a id="boolean_operators"></a>Boolean Operators</dt>
+<dl class="Բովանդակություն">
+  <dt><a id="boolean_operators"></a>Բուլյան օպերատորներ</dt>
   <dd>
     <p>
-      Boolean operators allow terms to be combined with logic operators.
-      The following operators are allowed: <strong>AND</strong>, <strong>OR</strong> and <strong>NOT</strong>.
+      Բուլյան օպերատորները թույլ են տալիս տերմինները զուգակցել տրամաբանական օպերատորների հետ:
+      Թույլատրվում են հետևյալ օպերատորները: <strong>AND</strong>, <strong>OR</strong> և <strong>NOT</strong>.
     </p>
-    <p>Note: Boolean operators must be ALL CAPS</p>
+    <p>Note: Բուլյան ԲՈԼՈՐ օպերատորները պետք է լինեն CAPS</p>
     <dl>
       <dt><a id="boolean_and"></a>AND</dt>
       <dd>
-        <p>The <strong>AND</strong> operator is the default conjunction operator. This means that if there is no Boolean operator between two terms, the AND operator is used. The AND operator matches records where both terms exist anywhere in the field of a record.</p>
-        <p>To search for records that contain "economics" and "Keynes" use the query: </p>
+        <p>Այս <strong>AND</strong> օպերատորը կապի լռելյայն օպերատորն է: Սա նշանակում է, որ եթե երկու տերմինների միջև չկա բուլյան օպերատոր, ապա օգտագործվում է AND օպերատորը: AND օպերատորը համընկնում է այն գրառումներին, որտեղ երկու տերմիններն էլ առկա են գրառման դաշտի ցանկացած վայրում:</p>
+        <p>"Keynes" և "economics" պարունակող գրառումներ որոնելու համար օգտագործեք հարցումը՝ </p>
         <pre class="code">economics Keynes</pre>
         <p>or</p>
         <pre class="code">economics AND Keynes</pre>
       </dd>
       <dt><a id="boolean_or"></a>OR</dt>
       <dd>
-        <p>The OR operator links two terms and finds a matching record if either of the terms exist in a record.</p>
-        <p>To search for documents that contain either "economics Keynes" or just "Keynes" use the query:</p>
+        <p>OR օպերատորը կապում է երկու տերմին և գտնում է համապատասխան գրառումը, եթե տերմիններից որևէ մեկը գոյություն ունի գրառումում:</p>
+        <p>"economics Keynes" կամ պարզապես "Keynes" պարունակող փաստաթղթեր որոնելու համար օգտագործեք հարցումը՝</p>
         <pre class="code">"economics Keynes" OR Keynes</pre>
       </dd>
       <dt><a id="boolean_not"></a>NOT</dt>
       <dd>
-        <p>The NOT operator excludes records that contain the term after NOT.</p>
-        <p>To search for documents that contain "economics" but not "Keynes" use the query: </p>
+        <p>NOT օպերատորը բացառում է այն գրառումները, որոնք պարունակում են NOT-ից հետո տերմինը:</p>
+        <p>"economics" պարունակող, բայց "Keynes" չպարունակող փաստաթղթեր փնտրելու համար օգտագործեք հարցումը՝</p>
         <pre class="code">economics NOT Keynes</pre>
-        <p>Note: The NOT operator cannot be used with just one term. For example, the following search will return no results:</p>
+        <p>Նշում. NOT օպերատորը չի կարող օգտագործվել միայն մեկ տերմինով: Օրինակ, հետևյալ որոնումը արդյունք չի տա՝</p>
         <pre class="code">NOT economics</pre>
       </dd>
     </dl>
