--- a/themes/root/templates/HelpTranslations/en/blender_advsearch.phtml
+++ b/themes/root/templates/HelpTranslations/en/blender_advsearch.phtml
@@ -1,17 +1,17 @@
-<h1>Advanced Searching Tips</h1>
+<h1>Ընդլայնված որոնման խորհուրդներ</h1>
 
 <dl class="Content">
-  <dt><a id="search_fields"></a>Search Fields</dt>
+  <dt><a id="search_fields"></a>Որոնման դաշտեր</dt>
   <dd>
-    <p>When you first visit the Advanced Search page, you are presented with
-       several search fields.  In each field, you can type the keywords you
-       want to search for.  <a href="<?=$this->url('help-home', [], ['query' => ['topic' => 'blender']])?>">Search operators</a>
-       are allowed.</p>
-    <p>Each field is accompanied by a drop-down that lets you specify the type
-       of data (title, author, etc.) you are searching for.  You can mix and
-       match search types however you like.</p>
-    <p>Results must match every search field.</p>
-    <p>The "Add Search Field" button may be used to add additional search fields
-       to the form.  You may use as many search fields as you wish.</p>
+    <p>Երբ դուք առաջին անգամ այցելում եք Ընդլայնված որոնման էջ, ձեզ կներկայացվի
+       որոնման մի քանի դաշտեր: Յուրաքանչյուր դաշտում կարող եք  մուտքագրել ձեր բանալի բառերը
+       որոնց ցանկանում եք փնտրել:  <a href="<?=$this->url('help-home', [], ['query' => ['topic' => 'blender']])?>">Որոնման օպերատորները</a>
+       թույլատրված են:</p>
+    <p>Յուրաքանչյուր դաշտ ուղեկցվում է բացվող ցանկով, որը թույլ է տալիս նշել տվյալների
+       տեսակը (վերնագիր, հեղինակ, և այլն) որը փնտրում ես: Դուք կարող եք խառնել և
+       համապատասխանեցնելորոնման տեսակները, ինչպես ցանկանում եք:</p>
+    <p>Արդյունքները պետք է համապատասխանեն յուրաքանչյուր որոնման դաշտին:</p>
+    <p>"Ավելացնել որոնման դաշտ" կոճակը կարող է օգտագործվել ձևանմուշին որոնման լրացուցիչ դաշտեր
+       ավելացնելու համար: Դուք կարող եք օգտագործել որոնման այնքան դաշտեր, որքան ցանկանում եք:</p>
   </dd>
 </dl>
