--- a/themes/root/templates/HelpTranslations/hy/blender.phtml
+++ b/themes/root/templates/HelpTranslations/hy/blender.phtml
@@ -10,7 +10,7 @@
   </li>
 </ul>
 
-<dl class="Բովանդակություն">
+<dl class="Content">
   <dt><a id="boolean_operators"></a>Բուլյան օպերատորներ</dt>
   <dd>
     <p>
