--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -485,7 +485,7 @@ body.rtl {
   display: flex;
   gap: 1rem;
   align-items: start;
-  margin-block: 0.5rem;
+  margin-block-start: 0.5rem;
 
   .retain-filters {
     float: right;
@@ -511,6 +511,7 @@ body.rtl {
   }
   .filters {
     flex: 10 1 auto;
+    margin-block-start: 0.25rem;
 
     .collapse {
       display: none;
@@ -532,7 +533,7 @@ body.rtl {
     }
     .filter-value {
       display: inline-block;
-      margin: 5px;
+      margin-block: 2px;
       padding: 2px 8px;
       font-weight: 600;
       color: #fff;
