Display jump links above combined search results (#3083)

--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -15,6 +15,30 @@
     ? $this->url($advancedSearchAction, [], ['query' => ['edit' => $results->getSearchId()]])
     : false;
 ?>
+<?php
+    $classId = $this->escapeHtml($domId ?? 'combined_' . $searchClassId);
+    $countsJs = <<<JS
+        function updateJumpLink_$classId() {
+          let count = $recordTotal;
+          count = count.toLocaleString();
+
+          const template = document.createElement('template');
+          template.innerHTML = "<span class='record-total'>(" + count + ")</span>";
+          const span = template.content.children[0];
+
+          const link = document.querySelector('.combined-jump-links .$classId');
+          link.append(span);
+        }
+
+        if (document.readyState != 'loading') {
+          updateJumpLink_$classId();
+        }
+        else {
+          document.addEventListener('DOMContentLoaded', updateJumpLink_$classId);
+        }
+        JS;
+?>
+<?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, $countsJs, 'SET')?>
 <?php if ($currentSearch['more_link'] ?? false): ?>
   <div class="pull-right flip">
     <a href="<?=$moreUrl?>" class="btn btn-link icon-link">
