--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -424,6 +424,25 @@ body.rtl {
   padding: 0;
 }
 
+.combined-jump-links {
+  margin-left: 1rem;
+  margin-right: 1rem;
+
+  ul {
+    display: inline;
+    list-style: none;
+    padding-left: 0;
+
+    li {
+      display: inline;
+      white-space: nowrap;
+      &:not(:first-child):before {
+        content: '\2013'; // n-dash
+      }
+    }
+  }
+}
+
 .combined-column {
   margin-left: 1rem;
   margin-right: 1rem;
