--- a/themes/bootstrap3/templates/RecordDriver/LibGuides/result-list.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/LibGuides/result-list.phtml
@@ -12,7 +12,7 @@
     </div>
     <?php foreach ($this->driver->getSummary() as $summaryItem): ?>
       <?php if (!empty($summaryItem)): ?>
-        <div class="resultItemLine1">
+        <div class="resultItemLine1 summary">
           <?=$this->escapeHtml($summaryItem)?>
         </div>
       <?php endif; ?>
