--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -68,6 +68,29 @@
       <?php foreach (($top = $results->getRecommendations('top')) as $current): ?>
         <?=$this->recommend($current)?>
       <?php endforeach; ?>
+      <?php foreach (($side = $results->getRecommendations('side')) as $current):
+        $recommendationClass = str_replace("\\", "_", get_class($current));
+        $recommendationJs = <<<JS
+          function addRecommendation_$recommendationClass() {
+            const sidebar = document.getElementById('search-sidebar');
+            const recommendation = document.getElementById('recommendation__$recommendationClass');
+            sidebar.append(recommendation);
+            recommendation.style.display = 'inherit';
+          }
+
+          if (document.readyState != 'loading') {
+            addRecommendation_$recommendationClass();
+          }
+          else {
+            document.addEventListener('DOMContentLoaded', addRecommendation_$recommendationClass);
+          }
+          JS;
+        ?>
+        <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, $recommendationJs, 'SET')?>
+        <div id="recommendation__<?=$recommendationClass?>" style="display: none;">
+          <?=$this->recommend($current)?>
+        </div>
+      <?php endforeach; ?>
       <?=
         $this->context()->renderInContext(
             'search/controls/showing.phtml',
