--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -69,22 +69,22 @@
         <?=$this->recommend($current)?>
       <?php endforeach; ?>
       <?php foreach (($side = $results->getRecommendations('side')) as $current):
-        $recommendationClass = str_replace("\\", "_", get_class($current));
+        $recommendationClass = str_replace('\\', '_', $current::class);
         $recommendationJs = <<<JS
-          function addRecommendation_$recommendationClass() {
-            const sidebar = document.getElementById('search-sidebar');
-            const recommendation = document.getElementById('recommendation__$recommendationClass');
-            sidebar.append(recommendation);
-            recommendation.style.display = 'inherit';
-          }
+            function addRecommendation_$recommendationClass() {
+              const sidebar = document.getElementById('search-sidebar');
+              const recommendation = document.getElementById('recommendation__$recommendationClass');
+              sidebar.append(recommendation);
+              recommendation.style.display = 'inherit';
+            }
 
-          if (document.readyState != 'loading') {
-            addRecommendation_$recommendationClass();
-          }
-          else {
-            document.addEventListener('DOMContentLoaded', addRecommendation_$recommendationClass);
-          }
-          JS;
+            if (document.readyState != 'loading') {
+              addRecommendation_$recommendationClass();
+            }
+            else {
+              document.addEventListener('DOMContentLoaded', addRecommendation_$recommendationClass);
+            }
+            JS;
         ?>
         <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, $recommendationJs, 'SET')?>
         <div id="recommendation__<?=$recommendationClass?>" style="display: none;">
