--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -566,7 +566,7 @@ body.rtl {
     }
     .filter-value {
       display: inline-block;
-      margin-block: 4px;
+      margin-block: 5px;
       padding: 2px 8px;
       font-weight: 600;
       color: #fff;
@@ -601,6 +601,7 @@ body.rtl {
   gap: 0.25rem;
 
   margin-bottom: 4px;
+  margin-top: 4px;
   padding: .5rem 1rem;
   border: 0;
   color: #555;
