--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -628,6 +628,7 @@ body.rtl {
   .btn {
     color: #fff;
     background: $list-group-active-bg;
+    font-weight: 600;
     vertical-align: baseline;
   }
   .btn::after {
