Fix else block style

--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -80,8 +80,7 @@
 
             if (document.readyState != 'loading') {
               addRecommendation_$recommendationClass();
-            }
-            else {
+            } else {
               document.addEventListener('DOMContentLoaded', addRecommendation_$recommendationClass);
             }
             JS;
