--- a/themes/bootstrap3/templates/combined/results.phtml
+++ b/themes/bootstrap3/templates/combined/results.phtml
@@ -80,9 +80,7 @@
     </div>
 
     <div class="<?=$this->layoutClass('sidebar')?>" id="search-sidebar">
-      <?php /* foreach ($this->results->getRecommendations('side') as $index => $current): ?>
-        <?=$this->recommend($current, 'side', $index)?>
-      <?php endforeach; */ ?>
+      <?php // Content is added via JS in results-list.phtml. ?>
     </div>
   <?php else: ?>
     <?=$this->context($this)->renderInContext('combined/stack-' . $placement . '.phtml', $viewParams); ?>
