--- a/themes/bootstrap3/templates/combined/results.phtml
+++ b/themes/bootstrap3/templates/combined/results.phtml
@@ -74,13 +74,17 @@
     ];
   ?>
 
-  <?php if ($anySideRecommendations ?? false): ?>
+  <?php if (!empty($columnSideRecommendations)): ?>
     <div class="<?=$this->layoutClass('mainbody')?>">
       <?=$this->context($this)->renderInContext('combined/stack-' . $placement . '.phtml', $viewParams); ?>
     </div>
 
     <div class="<?=$this->layoutClass('sidebar')?>" id="search-sidebar">
-      <?php // Content is added via JS in results-list.phtml. ?>
+      <?php foreach ($columnSideRecommendations as $columnSideRecommendation): ?>
+        <div class="recommendation_container__<?=$columnSideRecommendation?>">
+          <?php // Content is added via JS in results-list.phtml. ?>
+        </div>
+      <?php endforeach; ?>
     </div>
   <?php else: ?>
     <?=$this->context($this)->renderInContext('combined/stack-' . $placement . '.phtml', $viewParams); ?>
